--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,12 @@ a, i {
     margin-bottom: 0;
 }
 #logo-container{
-    display: flex;
-    justify-content: center;
+    display: flex !important;
+    justify-content: center !important;
 }
 #logo{
-    width: 40px;
-    margin-right: 15px;
+    width: 40px !important;
+    margin-right: 15px !important;
 }
 #navbar{
     padding: 10px;
